Fixed url generation and clarified some logging.

--- a/engineer/themes/dark_rainbow/templates/base.html
+++ b/engineer/themes/dark_rainbow/templates/base.html
@@ -81,8 +81,7 @@
             {% block footer %}
                 <footer class="{% block footer_class %}twelve columns centered{% endblock %}">
                     {% block footer_content %}
-                        <p>Powered by <a href="https://bitbucket.org/tylerbutler/django-engineer">engineer</a> and
-                            <a href="http://djangoproject.com">django</a>.</p>
+                        <p>Powered by <a href="https://bitbucket.org/tylerbutler/django-engineer">engineer</a>.</p>
                     {% endblock %}
                 </footer>
             {% endblock %}
