--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -296,6 +296,22 @@ footer {
     text-align: center;
 }
 
+.archives {
+    h2 {
+        .font-size-large(.2, 0);
+        //margin-top: 10px;
+    }
+    article {
+        border-bottom: 1px dotted @purple;
+        .post-date {
+            .font-size-default(.7, .3);
+        }
+        h1 {
+            .font-size-medium(.7, .3);
+        }
+    }
+}
+
 // MISCELLANEOUS
 .permalink {
     a {
