--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -1,12 +1,3 @@
-{# Use the future Django 1.5 url tag behavior. #}
-{#{% load url from future %}#}
-
-{# django-compress #}
-{#{% load compress %}#}
-
-{# django-engineer #}
-{#{% load engineer %}#}
-
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -37,26 +28,18 @@
 
     {% if theme.use_foundation %}
         {# FOUNDATION CSS #}
-
-{#        {% compress css %}#}
             <link rel="stylesheet" href="{{ engineer.foundation_url }}stylesheets/grid.css">
-{#        {% endcompress %}#}
-
-{#        {% compress css %}#}
             <link rel="stylesheet" href="{{ engineer.foundation_url }}stylesheets/mobile.css">
-{#        {% endcompress %}#}
 
         <!--[if lt IE 9]>
-{#        {% compress css %}#}
             <link rel="stylesheet" href="{{ engineer.foundation_url }}stylesheets/ie.css">
-{#        {% endcompress %}#}
         <![endif]-->
     {% endif %}
 
     {% block stylesheets %}{% endblock %}
 
     {% if theme.use_lesscss %}
-        {% if config.USE_CLIENT_SIDE_LESS %}
+        {% if settings.USE_CLIENT_SIDE_LESS %}
             <script src="{{ engineer.lesscss_url }}" type="text/javascript"></script>
             <script type="text/javascript">
                 //less = { env:'development' };
