--- a/engineer/themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/base.html
@@ -24,19 +24,15 @@
     {%- block header_primary %}
         <header id="primary" class="row">
             {%- block header_primary_content %}
-                <h1 class="{%- block header_primary_h1_class %}six columns{% endblock -%}">
+                <h1 class="{%- block header_primary_h1_class %}five columns{% endblock -%}">
                     <a href="{{ urlname('home') }}">
                         {%- block header_primary_title %}{{ settings.SITE_TITLE }}{% endblock -%}</a>
                 </h1>
             {% endblock -%}
             {%- block nav_primary %}
-                <nav class="{%- block nav_primary_class %}six columns{% endblock -%}">
+                <nav class="{%- block nav_primary_class %}seven columns{% endblock -%}">
                     {%- block nav_primary_content %}
-                        <ul class="replace_me">
-                            <li class="">
-                                <a href="{{ urlname('home') }}">home</a>
-                            </li>
-                        </ul>
+                        {% include 'theme/_nav_primary.html' %}
                     {% endblock -%}
                 </nav>
             {% endblock -%}
