--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -225,6 +225,11 @@ header#secondary {
                 line-height: 75px;
             }
         }
+
+        ul.tags li {
+            .font-size-small(0, 0);
+            text-align: right;
+        }
     }
 }
 
@@ -234,16 +239,20 @@ header#secondary {
         padding-bottom: @line-height-default * .5;
         border-bottom: 1px dotted @purple;
 
-        .post-date, .post-date div, div.attribution, .tags {
+        .post-date, .post-date div, div.attribution {
             display: inline;
+        }
+
+        ul.tags {
+            padding: 0;
+            li {
+                display: inline;
+                padding-right: 8px;
+            }
         }
 
         .post-date {
             font-family: @font-heading;
-        }
-
-        .tags {
-            float: right;
         }
 
         .permalink, .attribution {
