--- a/engineer/themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/base.html
@@ -26,7 +26,7 @@
             {%- block header_primary_content %}
                 <h1 class="{%- block header_primary_h1_class %}five columns{% endblock -%}">
                     <a href="{{ urlname('home') }}">
-                        {%- block header_primary_title %}{{ settings.SITE_TITLE }}{% endblock -%}</a>
+                        {%- block header_primary_title %}{{ settings.SITE_TITLE|lower }}{% endblock -%}</a>
                 </h1>
             {% endblock -%}
             {%- block nav_primary %}
