--- a/engineer/themes/dark_rainbow/templates/theme/post_archives.html
+++ b/engineer/themes/dark_rainbow/templates/theme/post_archives.html
@@ -23,7 +23,7 @@
                             {{ post.timestamp|date('%d %b') }}
                         </div>
                         <div class="ten columns">
-                            <h1><a href="{{ post.absolute_url }}">{{ post.title }}</a></h1>
+                            <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
                         </div>
                     </article>
                 {% endfor %}
