--- a/sample_site/templates/pages/about.html
+++ b/sample_site/templates/pages/about.html
@@ -1,10 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title>An About Page</title>
-</head>
-<body>
-This is an example template page.
-</body>
-</html>
+{% extends 'theme/template_page_simple.html' %}
+
+{% block title %}About Engineer{% endblock %}
+
+{% block content %}
+    <h2>Features</h2>
+
+{% endblock %}
