--- a/engineer/templates/emma/base.html
+++ b/engineer/templates/emma/base.html
@@ -2,6 +2,8 @@
 
 {%- from 'core/_macros.html' import render_less_link -%}
 
+{% block site_title %}Emma{% endblock %}
+
 {% block foundation %}{% endblock %}
 
 {%- block stylesheets %}
