--- a/engineer/templates/emma/home.html
+++ b/engineer/templates/emma/home.html
@@ -33,7 +33,7 @@
                         {{ stats['time_run']|naturaltime }}
                     </div>
                     <div>
-                        <span class="green radius label">{{ stats['counts']['new_posts'] }}</span> New Posts
+                        <span class="green radius label">{{ stats['counts']['new_posts'] }}</span> New/Modified Posts
                     </div>
                     <hr/>
                     <h4>File Activity</h4>
