--- a/engineer/themes/dark_rainbow/templates/theme/post_detail.html
+++ b/engineer/themes/dark_rainbow/templates/theme/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'theme/layouts/no_sidebar.html' %}
 
+{% block page_title %}{{ post.title }}{% endblock %}
+
 {# No secondary header. #}
 {% block header_secondary %}{% endblock %}
 
