--- a/engineer/themes/dark_rainbow/templates/theme/tags_list.html
+++ b/engineer/themes/dark_rainbow/templates/theme/tags_list.html
@@ -1,5 +1,3 @@
 {% extends 'theme/post_archives.html' %}
 
-{% block header_secondary_title %}
-    Posts tagged '{{ tag }}'
-{% endblock %}
+{% block page_title %}Posts tagged '{{ tag }}'{% endblock %}
