--- a/sample_site/templates/pages/about.html
+++ b/sample_site/templates/pages/about.html
@@ -1,6 +1,8 @@
 {% extends 'theme/template_page_simple.html' %}
 
-{% block title %}About Engineer{% endblock %}
+{% block page_title %}About Engineer{% endblock %}
+
+{% block header_secondary_title %}About Engineer{% endblock %}
 
 {% block content %}
     <h2>Features</h2>
