--- a/sample_site/templates/pages/themes.html
+++ b/sample_site/templates/pages/themes.html
@@ -1,6 +1,8 @@
 {% extends 'theme/template_page_simple.html' %}
 
-{% block title %}Engineer Themes{% endblock %}
+{% block page_title %}Themes{% endblock %}
+
+{% block header_secondary_title %}Themes{% endblock %}
 
 {% block content %}
     <p>Engineer comes with two themes, and provides a basic framework for creating additional ones if you're so
