--- a/sample_site/templates/theme/_nav_primary.html
+++ b/sample_site/templates/theme/_nav_primary.html
@@ -2,6 +2,6 @@
 
 <ul>
     {{ navigation_link('articles', urlname('home'), ['post', 'listpage']) }}
-    {{ navigation_link('about', urlname('projects'), ['about']) }}
+    {{ navigation_link('about', urlname('about'), ['about']) }}
     {{ navigation_link('themes', urlname('themes'), ['themes']) }}
 </ul>
