--- a/engineer/themes/dark_rainbow/templates/theme/template_page_base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/template_page_base.html
@@ -1,3 +1,7 @@
 {% extends 'theme/base.html' %}
 
+{% block page_title %}Template Page Base{% endblock %}
+
 {% block nav_secondary_content %}{# Empty secondary nav #}{% endblock %}
+
+{% block header_secondary_title %}{{ self.page_title() }}{% endblock %}
