Tweaks to the information displayed and layout in Emma.

--- a/engineer/templates/emma/base.html
+++ b/engineer/templates/emma/base.html
@@ -58,7 +58,9 @@
     <div class="container">
         <div class="row">
             <header class="twelve columns">
-                <h1 style="display: inline;">Emma: </h1>
+                <h1><a href="{{ settings.SITE_URL }}">{{ settings.SITE_TITLE }}</a></h1>
+                <hr/>
+                <h2 style="display: inline;">Emma: </h2>
 
                 <h3 style="display: inline;">Engineer Miniature Management Automaton</h3>
             </header>
