--- a/sample_site/templates/pages/about.html
+++ b/sample_site/templates/pages/about.html
@@ -5,6 +5,7 @@
 {% block header_secondary_title %}About Engineer{% endblock %}
 
 {% block content %}
-    <h2>Features</h2>
-
+    <article>
+        <h2>Features</h2>
+    </article>
 {% endblock %}
