--- a/sample_site/templates/pages/themes.html
+++ b/sample_site/templates/pages/themes.html
@@ -5,11 +5,16 @@
 {% block header_secondary_title %}Themes{% endblock %}
 
 {% block content %}
-    <p>Engineer comes with two themes, and provides a basic framework for creating additional ones if you're so
-        inclined.</p>
-    <h2>Dark Rainbow</h2>
-    <p>The default Engineer theme, Dark Rainbow has also been called 'Voldemort's Skittles,'
-        'Unicorn Vomit,' and other names not fit to repeat here. Needless to say, the parade of
-        colors isn't for everyone.</p>
-    <h2>Ole Blue Eyes</h2>
+    <article>
+        <p>Engineer comes with two themes, and provides a basic framework for creating additional ones if you're so
+            inclined.</p>
+
+        <h2>Dark Rainbow</h2>
+
+        <p>The default Engineer theme, Dark Rainbow has also been called 'Voldemort's Skittles,'
+            'Unicorn Vomit,' and other names not fit to repeat here. Needless to say, the parade of
+            colors isn't for everyone.</p>
+
+        <h2>Ole Blue Eyes</h2>
+    </article>
 {% endblock %}
